--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,9 +1,10 @@
 FROM node:14-slim
 
+RUN mkdir -p /usr/src/app
+
 WORKDIR /usr/src/app
 
 COPY ./package.json ./
-COPY ./package-lock.json ./
 
 RUN npm install
 
@@ -11,4 +12,4 @@ COPY . .
 
 EXPOSE 3000
 
-CMD [ "npm", "serve" ]
+CMD [ "npm", "start" ]
