--- a/client/package.json
+++ b/client/package.json
@@ -6,13 +6,15 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "webpack -p --env.NODE_ENV=production",
-    "serve": "webpack-dev-server --mode=development --env.NODE_ENV=local --openssl-legacy-provider"
+    "serve": "webpack-dev-server --mode=development --env.NODE_ENV=local",
+    "start": "webpack-dev-server --mode=development --env.NODE_ENV=local"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.10.2",
     "@babel/plugin-transform-runtime": "^7.10.1",
+    "babel-plugin-transform-class-properties": "*",
     "@babel/preset-env": "^7.10.2",
     "@babel/preset-react": "^7.10.1",
     "babel-loader": "^8.0.5",
