link application with docker and nginx

--- a/client/.env
+++ b/client/.env
@@ -1,4 +1,4 @@
 NODE_ENV=development
-MONGODB_URI=mongodb://mongo:27017/recipesdb_prod?authSource=admin
-PORT=8000
+MONGODB_URI=mongodb://mongodb_dev:27017/recipesdb_prod?authSource=admin
+PORT=3000
 SECRET=Nrr8YDxCK1pnOwEEHqzRIHlEOayWBc
