--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,6 @@
 NODE_ENV=development
-MONGODB_URI=mongodb://mongo:27017/recipesdb_prod
-PORT=8000
+MONGODB_URI=mongodb://mongodb_dev:27017/recipesdb_dev
+PORT=4300
 SECRET=Nrr8YDxCK1pnOwEEHqzRIHlEOayWBc
+APIKEY=d45d74b4918acd000c9c416c48509a9e
+APPID=26dcb1ea
