--- a/client/.env
+++ b/client/.env
@@ -1,4 +1,5 @@
 NODE_ENV=development
 MONGODB_URI=mongodb://mongodb_dev:27017/recipesdb_prod?authSource=admin
 PORT=3000
+API_BASE_URL=http://localhost:5000/
 SECRET=Nrr8YDxCK1pnOwEEHqzRIHlEOayWBc
