--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -12,19 +12,34 @@ http {
         }
 
     server {
+        server_name local.website.dev;
+        rewrite ^(.*) https://localhost$1 permanent;
+    }
+
+    server {
         listen 80;
+        listen 443 default_server ssl;
+        ssl_certificate /etc/nginx/ssl/localhost.crt;
+        ssl_certificate_key /etc/nginx/ssl/localhost.key;
+        ssl_protocols TLSv1.2 TLSv1.1 TLSv1;
         server_name frontend;
         server_name backend;
 
         location / {
             proxy_pass http://frontend;
-            proxy_set_header Host $http_host;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+            proxy_set_header Host $host;
         }
 
         location /api {
             proxy_pass http://backend;
             rewrite ^api/?(.*) /$1 break;
-            proxy_set_header Host $http_host;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+            proxy_set_header Host $host;
         }
     }
 }
